fix 1th part of problem